<resources>
    <string name="app_name">音乐播放器</string>
    <string name="shuffle_btn">随机播放</string>
    <string name="favourites_btn">我喜欢的音乐</string>
    <string name="playlist_btn">playlist</string>
    <string name="total_songs">歌曲总数</string>
    <string name="word_of_music">word_of_music</string>
    <string name="song_name">song name</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading...</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="back_btn">back</string>
    <string name="open">Open</string>
    <string name="Close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to\n\r World of Music</string>
    <string name="feeback">信息</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="song_album">song album</string>

    <string name="min_15">15分钟</string>
    <string name="min_30">30分钟</string>
    <string name="min_60">60分钟</string>

    <string name="search_view">Search View</string>

    <string name="song_img">song image</string>
    <string name="playlist_name">playlit name</string>
    <string name="playlist_delete">delete</string>

    <string name="user_name">your name</string>

    <string name="version">v.1.0.0</string>
    <string name="gitee_addr">https://gitee.com/HJKLSDF/Music_Player</string>
    <string name="wechat">Re-Live-I</string>
    <string name="qq">1452703183</string>
    <string name="github_add">https://github.com/codepyn/Music_Player</string>
    <string name="team">何世龙、徐应旺、杨建武</string>
</resources>