<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--主体区域-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--顶部区域-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--随机按钮-->
                <Button
                    android:id="@+id/shuffleBtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/shuffle_btn"
                    android:drawableTop="@drawable/shuffle_icon"
                    android:text="@string/shuffle_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/black">

                </Button>
                <!--喜欢按钮-->
                <Button
                    android:id="@+id/favouritesBtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/favourites_btn"
                    android:drawableTop="@drawable/favorite_icon"
                    android:text="@string/favourites_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/black">

                </Button>


            </LinearLayout>
            <!--歌曲总数-->
            <TextView
                android:id="@+id/totalSongs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/total_songs"
                android:textAllCaps="false"></TextView>
            <!--歌曲列表-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/musicRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarThumbVertical="@drawable/scroll_bar_icon"
                android:scrollbars="vertical">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nowPlaying"
            android:name="com.hslxywyjw.musicplayer.NowPlaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout="@layout/fragment_now_playing">

        </androidx.fragment.app.FragmentContainerView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--侧边栏-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/nav_menu"></com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>